{{$NEXT}}

0.200002 2016-04-07

- The in-memory tree now has a root record rather than a root node. This fixes
  the insertion of a /0 network (GitHub #55) and a segmentation fault when
  merging two /1 networks into a /0 network (GitHub #58). Although insertions
  of /0 are allowed (e.g., to create a default record for the database),
  writing, iterating, and freezing a database that only contains a single /0
  data record are currently forbidden.
- Fixed a bug where an incorrect node_count could be written to the database,
  causing invalid metadata errors when reading it.
- The node_count() method on the Tree object now always recalculates the node
  count rather than using a possibly incorrect cached value.

0.200001 2016-04-04

[ BACKWARDS INCOMPATIBILITIES ]

- Inserts into IPv4 aliased subtrees are no longer allowed when
  alias_ipv6_to_ipv4 is enabled. When using an aliased tree, you will only be
  able to insert IPv4 networks into ::0.0.0.0/96. If you are inserting these
  addresses using IPv4 notation, not IPv6, this is the default location and
  the change will not affect you. The reason for this is that inserting into
  the aliased subnets leads to complications in determining the correct tree
  depth for the insert and could also cause unintentional overwriting of data.

[ BUGFIXES ]

- Some memory leaks when throwing an exception were fixed.


0.200000 2016-03-31

[ BACKWARDS INCOMPATIBILITIES ]

- When calling $tree->write_tree(), this module now defaults to removing
  reserved and private networks from the tree before writing the tree to the
  filehandle. If you want to create a tree that contains private networks, set
  the constructor parameter "remove_reserved_networks" to false. This change
  of behavior was done to allow code that previously used
  Net::Works::Network->range_as_subnets() to use the new insert_range() method
  added in this release.
- When recursively merging a subtree, alias nodes are no longer followed.