@@ -8,15 +8,16 @@ author = Mark Fowler <mfowler@maxmind.com>
 dist = MaxMind-DB-Writer
 prereqs_skip = GraphViz2
 stopwords = CIDR
+stopwords = docs
+stopwords = en
 stopwords = GeoIP
 stopwords = MMDB
-stopwords = TW
+stopwords = routable
 stopwords = Teredo
+stopwords = toplevel
+stopwords = TW
 stopwords = uint
 stopwords = zh
-stopwords = en
-stopwords = docs
-stopwords = toplevel
 -remove = MakeMaker
 -remove = Test::Compile
 -remove = Test::Pod::Coverage::Configurable
